1. 登录接口获取token 2. 测试解析token，获取需要上下文的参数
