# docs/swagger.json
@@ -9,6 +9,8 @@
         },
         "version": "1.0"
     },
+    "host": "localhost:8080",
+    "basePath": "/api/v1",
     "paths": {
         "/login": {
             "post": {
@@ -22,18 +24,22 @@
                 "summary": "登录",
                 "parameters": [
                     {
-                        "type": "string",
                         "description": "用户名",
                         "name": "userName",
-                        "in": "query",
-                        "required": true
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
                     },
                     {
-                        "type": "string",
                         "description": "密码",
                         "name": "passWord",
-                        "in": "query",
-                        "required": true
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {
@@ -58,7 +64,7 @@
                 }
             }
         },
-        "/signin": {
+        "/signup": {
             "post": {
                 "description": "用户注册接口",
                 "produces": [
@@ -72,7 +78,7 @@
                     {
                         "type": "string",
                         "description": "用户名",
-                        "name": "userName",
+                        "name": "username",
                         "in": "query",
                         "required": true
                     },
@@ -80,6 +86,13 @@
                         "type": "string",
                         "description": "密码",
                         "name": "passWord",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "确认密码",
+                        "name": "rePassword",
                         "in": "query",
                         "required": true
                     }
@@ -101,6 +114,12 @@
                                     }
                                 }
                             ]
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
                         }
                     }
                 }
